# EstructuraDatosBasicos

./: .gitignore  CMakeLists.txt  README.md  estructuras.cp313-win_amd64.pyd  estructuras_datos.cpp  interfaz_estructuras.py  setup.py
archivos de compilacion/: compilar.py
